:nail_care: Shrink sidebar tiles to prevent overflow for medium-large displays

--- a/src/sidebar/styles/SidebarTile.scss
+++ b/src/sidebar/styles/SidebarTile.scss
@@ -9,7 +9,7 @@
 
     > .monster-container {
         position: relative;
-        max-width: 9em;
+        max-width: 7em;
         margin: 0 auto;
         &:before {
             content: "";
